--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,36 @@
 button{
   background-Color:white;
-  padding:10px;
-  font-size:20px;
-  margin:5px;
-  width:50px;
+  padding:1rem;
+  font-size:1.2rem;  
+  margin:0.3rem;
+  width:12vw;
   border:none;
-  border-radius:5px;
+  min-width:50px;
+  max-width:80px;
+  border-radius:0.5em;
 }
 input{
   border: none;            
   outline: none;
-  border-radius:5px;
-  width:226px;
-  height:45px;
+  border-radius:0.5em;
+  width:90%;
+  max-width:300px;
+  height:3rem;
   text-align:right;
-  font-size:25px;
+  font-size:1.5em;
+  padding:0 0.5em;
 }
 .demo
 {
 border:none;
-    padding:30px;
+    padding:2em;
         display:inline-block;
-    border-Radius:10px;
-    background-Color:rgb(212, 208, 208);
+    border-Radius:1em;
+    background-Color:black;
     text-Align:center;
-    margin:50px;
+    margin:2em;
+  min-height:300px;
+  width:90%;
     height:320px;
   }
   .page1
@@ -34,13 +40,37 @@ border:none;
   align-items: center;      
   height: 100vh;  
   }
-  @media (min-width: 481px) and (max-width: 768px) {
+  @media (min-width: 480px){
   .calculator input {
-    width: 200px;
-    font-size: 22px;
+    width:20vw;
+    font-size:1rem;
+    padding:0.8em,
   }
   .calculator button {
-    font-size: 20px;
-    padding: 10px;
+    font-size: 1rem;
+    width:20vw;
+    padding:0.8em;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  button {
+    width: 15vw;
+    font-size: 1.1rem;
+    padding: 1em;
+  }
+  input {
+    font-size: 1.3rem;
+    height: 3em;
+  }
+}
+@media (min-width: 769px) {
+  button {
+    width: 12vw;
+    font-size: 1.2rem;
+    padding: 1em;
+  }
+  input {
+    font-size: 1.5rem;
+    height: 3.2em;
   }
 }
