Updated calculator code and styles

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@ button{
   height:2.5rem;
   font-size:1.5rem;
   margin:0.2rem;
+  margin-bottom:1rem;
   text-align:center;
-  background-color:rgb(230, 138, 40);
+  background-color:orange;
   border:white 2px solid; 
   color:white;
-  border-radius:3rem;
+  border-radius:0.5rem;
 }
 input{
   max-width:210px;
@@ -15,17 +16,21 @@ height:2.5rem;
 text-align:right;
 font-size:1.5rem;
 margin-top:0.5rem;
-border:none;
-outline:none;
+margin-bottom:0.9rem;
+outline:3px;
+border:orange 5px solid;
 }
 .demo
 {
-  border:orange 2px solid;
+  border:orange 5px solid;
 max-width:250px;
 padding-left:1.4rem;
 padding-right:1.4rem;
-height:300px;
+padding-top: 1.4rem;
+padding-bottom:0.5rem;
+height:370px;
 background-color:white;
+border-radius:0.5rem;
 }
 .page1 {
   display: flex;
